# stock-fetcher

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: cli_manual.md  mcp_manual.md
examples/: basic_usage.py  cli_example.sh  error_handling.py  mcp_example.py
src/stock_fetcher/: __init__.py  base.py  exceptions.py  factory.py  flickr.py  pexels.py  pixabay.py  unsplash.py
src/stock_fetcher/cli/: main.py
src/stock_fetcher/clients/: __init__.py  flickr.py  pexels.py  pixabay.py  unsplash.py
src/stock_fetcher/mcp/: server.py
