[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-fetcher"
version = "0.1.0"
description = "A Python library for fetching copyright-free images from various sources like Pexels, Pixabay, Unsplash, and Flickr."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Ata", email = "ata@example.com" }
]
dependencies = [
    "requests",
    "Pillow",
    "beautifulsoup4"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/AtaCanYmc/stock-fetcher"
