[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-fetcher"
version = "0.2.0"
description = "A Python library for fetching copyright-free images from various sources like Pexels, Pixabay, Unsplash, and Flickr."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "pydantic",
    "beautifulsoup4"
]

[project.scripts]
stock-fetcher = "stock_fetcher.cli.main:app"

[project.optional-dependencies]
cli = [
    "typer",
    "rich"
]
mcp = [
    "mcp"
]
all = [
    "typer",
    "rich",
    "mcp"
]
dev = [
    "pre-commit",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]
